details: Add support for startup policy for USB passed through devices
Signed-off-by: Lin Ma <lma@suse.de>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -3836,6 +3836,31 @@
                                     <property name="top-attach">1</property>
                                   </packing>
                                 </child>
+                                <child>
+                                  <object class="GtkLabel" id="label6">
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">False</property>
+                                    <property name="halign">start</property>
+                                    <property name="label" translatable="yes">Startup Policy:</property>
+                                    <property name="use-underline">True</property>
+                                    <property name="mnemonic-widget">hostdev-usb-startup-policy</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left-attach">0</property>
+                                    <property name="top-attach">2</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkComboBox" id="hostdev-usb-startup-policy">
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">False</property>
+                                    <signal name="changed" handler="on_hostdev_usb_startup_policy_changed" swapped="no"/>
+                                  </object>
+                                  <packing>
+                                    <property name="left-attach">1</property>
+                                    <property name="top-attach">2</property>
+                                  </packing>
+                                </child>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
